--- a/estudiantes/subir_asignaciones.html
+++ b/estudiantes/subir_asignaciones.html
@@ -92,7 +92,7 @@
         <!-- Navegación principal -->
         <nav class="nav" aria-label="Dashboard Estudiante">
           <ul>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a href="#">
                 <span class="icon">
                   <svg viewBox="0 0 24 24" fill="currentColor">
@@ -104,8 +104,8 @@
                 <span class="label">Mis Tareas</span>
               </a>
             </li>
-            <li class="nav-item">
-              <a href="../estudiantes/subir_asignaciones.html">
+            <li class="nav-item active">
+              <a href="#">
                 <span class="icon">
                   <svg viewBox="0 0 24 24" fill="currentColor">
                     <path d="M5 20h14v-2H5v2zM5 4v12h14V4H5zm12 10H7V6h10v8z" />
@@ -253,96 +253,153 @@
             </div>
           </div>
 
-          <!-- Cards resumen -->
-
-          <div class="grid">
-            <div class="card small">
-              <div class="card-icon professor">
-                <svg
-                  viewBox="0 0 24 24"
-                  fill="currentColor"
-                  width="32"
-                  height="32"
-                >
-                  <path
-                    d="M9 11H7v2h2v-2zm0 4H7v2h2v-2zm4-4h-2v2h2v-2zm0 4h-2v2h2v-2zm4-8h-8v2h8V7zm0 4h-8v2h8v-2z"
-                  />
-                </svg>
+          <!-- Filtros -->
+          <section class="filters mt-4">
+            <div class="filters-box">
+              <div class="filter-group">
+                <input
+                  type="text"
+                  id="searchInput"
+                  class="form-control"
+                  placeholder="🔎 Buscar actividad..."
+                />
               </div>
-              <div class="card-title">Tareas Pendientes</div>
-              <div class="card-value">40</div>
-            </div>
 
-            <div class="card small">
-              <div class="card-icon student">
-                <svg
-                  viewBox="0 0 24 24"
-                  fill="currentColor"
-                  width="32"
-                  height="32"
-                >
-                  <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
-                </svg>
+              <div class="filter-group">
+                <label for="dateFrom">Desde</label>
+                <input type="date" id="dateFrom" class="form-control" />
               </div>
-              <div class="card-title">Tareas Entregadas</div>
-              <div class="card-value">420</div>
-            </div>
 
-            <div class="card small">
-              <div class="card-icon group">
-                <svg
-                  viewBox="0 0 24 24"
-                  fill="currentColor"
-                  width="32"
-                  height="32"
-                >
-                  <path
-                    d="M1 21h22L12 2 1 21zm12-3h-2v2h2v-2zm0-6h-2v4h2v-4z"
-                  />
-                </svg>
+              <div class="filter-group">
+                <label for="dateTo">Hasta</label>
+                <input type="date" id="dateTo" class="form-control" />
               </div>
-              <div class="card-title">Tareas Vencidas</div>
-              <div class="card-value">12</div>
+
+              <div class="filter-group">
+                <label for="sortFilter">Ordenar</label>
+                <select id="sortFilter" class="form-control">
+                  <option value="recent">Más recientes</option>
+                  <option value="oldest">Más antiguas</option>
+                </select>
+              </div>
+
+              <div class="filter-group">
+                <button class="btn btn-primary w-100" id="applyFilters">
+                  Aplicar
+                </button>
+              </div>
             </div>
-          </div>
+          </section>
+
           <!-- Últimas Actividades -->
           <section class="latest-activities mt-4">
-            <h2 class="mb-3">Últimas Actividades Asignadas</h2>
-            <div class="activities-list">
-              <div class="activity-card">
-                <div class="activity-info">
-                  <strong>Proyecto: Sistema Tutorías</strong>
-                  <p>Tarea: Completar informe de avance</p>
-                </div>
-                <div class="activity-time">
-                  <span>Tiempo estimado: 3 días</span>
-                </div>
-              </div>
+            <h2 class="mb-3">Actividades De Proyecto</h2>
+            <div class="activities-list" id="activitiesList">
+              <!-- Actividades dinámicas -->
+            </div>
 
-              <div class="activity-card">
-                <div class="activity-info">
-                  <strong>Proyecto: App Biblioteca</strong>
-                  <p>Tarea: Revisar interfaz de usuario</p>
-                </div>
-                <div class="activity-time">
-                  <span>Tiempo estimado: 2 días</span>
-                </div>
-              </div>
-
-              <div class="activity-card">
-                <div class="activity-info">
-                  <strong>Proyecto: Portal Académico</strong>
-                  <p>Tarea: Subir documentación final</p>
-                </div>
-                <div class="activity-time">
-                  <span>Tiempo estimado: 1 día</span>
-                </div>
-              </div>
+            <!-- Paginación -->
+            <div class="pagination mt-3 d-flex justify-content-center gap-2">
+              <button class="btn btn-sm btn-secondary" id="prevPage">
+                Anterior
+              </button>
+              <span id="pageInfo"></span>
+              <button class="btn btn-sm btn-secondary" id="nextPage">
+                Siguiente
+              </button>
             </div>
           </section>
         </main>
 
         <!--<modales>-->
+        <!-- Modal de Actividad -->
+        <!-- Modal de Actividad -->
+        <!-- Modal de Actividad -->
+        <div
+          class="modal fade"
+          id="actividadModal"
+          tabindex="-1"
+          aria-labelledby="actividadModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content modal-dark position-relative">
+              <!-- Fondo visual -->
+              <div class="modal-bg-image"></div>
+
+              <!-- HEADER -->
+              <div class="modal-header border-0">
+                <h5 class="modal-title text-white" id="actividadModalLabel">
+                  Detalle de Actividad
+                </h5>
+                <button
+                  type="button"
+                  class="btn-close btn-close-white"
+                  data-bs-dismiss="modal"
+                  aria-label="Cerrar"
+                ></button>
+              </div>
+
+              <!-- BODY -->
+              <div class="modal-body position-relative" style="z-index: 10">
+                <p class="text-white">
+                  <strong>Proyecto:</strong> <span id="modalProyecto"></span>
+                </p>
+                <p class="text-white">
+                  <strong>Tarea:</strong> <span id="modalTarea"></span>
+                </p>
+                <p class="text-white">
+                  <strong>Tiempo estimado:</strong>
+                  <span id="modalTiempo"></span>
+                </p>
+                <p class="text-white">
+                  <strong>Fecha asignada:</strong> <span id="modalFecha"></span>
+                </p>
+
+                <!-- Input de entrega -->
+                <div class="mt-3">
+                  <label for="fileEntrega" class="form-label text-white"
+                    >Subir entrega</label
+                  >
+                  <input
+                    type="file"
+                    class="form-control form-dark"
+                    id="fileEntrega"
+                    accept=".pdf,.docx,.pptx,.zip,.rar,.jpg,.png"
+                  />
+                </div>
+              </div>
+
+              <!-- FOOTER -->
+              <div
+                class="modal-footer border-0 position-relative"
+                style="z-index: 10"
+              >
+                <button
+                  type="button"
+                  id="btnPrevActividad"
+                  class="btn btn-secondary"
+                >
+                  ← Anterior
+                </button>
+                <button
+                  type="button"
+                  id="btnNextActividad"
+                  class="btn btn-accent"
+                >
+                  Siguiente →
+                </button>
+                <button
+                  type="button"
+                  id="btnEntregarActividad"
+                  class="btn btn-success"
+                >
+                  Entregar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <!-- FOOTER -->
         <footer class="footer">
@@ -351,7 +408,7 @@
             Diseñado por tu equipo • <span id="yearFooter"></span>
           </div>
         </footer>
-        <script src="../assets/js/dashboard/create-proyecto.js"></script>
+        <script src="../assets/js/estudiante/subir_asignacion.js"></script>
         <script src="../assets/js/alertas.js"></script>
         <!-- Incluir CSS y JS de Quill -->
         <link
