--- a/dashboard.html
+++ b/dashboard.html
@@ -231,8 +231,8 @@
             <!-- Menú desplegable -->
             <div class="user-menu" id="userMenu">
               <ul>
-                <li><a href="#">Perfil</a></li>
-                <li><a href="#">Salir</a></li>
+                <li><a href="dashboard/dashboard_perfil.html">Perfil</a></li>
+                <li><a href="index.html">Salir</a></li>
                 <li><a href="dashboard/dashboard_director.html">Director</a></li>
                 <li><a href="dashboard/dashboard _docente.html">Profesor</a></li>
                 <li><a href="dashboard/dashboard_estudiante.html">Estudiante</a></li>
